Port to Python3, rename to json_home_client make pep8 compliant, api cleanups

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,22 @@
-*.xcodeproj
-*.DS_Store
-local/*
-*.log
+# Editor files
+*.sublime-*
+.vscode/
+.idea/
+
+# local config files
+*.local.*
+
+# Python output files
 *.pyc
-*.orig
-uritemplate-test/*
-.hg/*
+__pycache__
+.mypy_cache
+*.egg-info
+build/
+dist/
+
+# OS specific files
+.DS_Store
+Thumbs.db
+UserInterfaceState.xcuserstate
+.env
+$RECYCLE.BIN/
