--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -32,10 +32,13 @@ mypy:
 test:
   stage: test
   before_script:
-    - pip install -e ".[dev]"
+    - pip install -e .
     - chmod a+x test.py
   script:
     - ./test.py
+  rules:
+    - exists:
+        - test.py
 
 
 package:
@@ -49,9 +52,8 @@ package:
   artifacts:
     paths:
       - dist
-  only:
-    - tags
-    - /^v[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9-\.]+)?$/
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9-\.]+)?$/'
 
 
 pdoc3:
@@ -64,9 +66,8 @@ pdoc3:
   artifacts:
     paths:
       - html
-  only:
-    - tags
-    - /^v[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9-\.]+)?$/
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9-\.]+)?$/'
 
 
 deploy:
@@ -76,6 +77,5 @@ deploy:
     - pip install --upgrade wheel twine
   script:
     - python -m twine upload --username __token__ --password ${PYPI_API_TOKEN} --non-interactive --disable-progress-bar --repository-url ${PYPI_REPOSITORY_URL} dist/*
-  only:
-    - tags
-    - /^v[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9-\.]+)?$/
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9-\.]+)?$/'
