--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,11 @@
 [flake8]
 max-line-length = 160
-ignore = D107, D401, W503, ANN002, ANN003, ANN101, ANN102
+#ignore = D107, D401, W503, ANN002, ANN003, ANN101, ANN102
+ignore = D102, D105,  D107, D401, W503, ANN002, ANN003, ANN101, ANN102, ET101
+select = W504
 
+use-flake8-tabs = True
+blank-lines-indent = never
 
 [mypy]
 mypy_path = stubs
